--- a/src/Home.css
+++ b/src/Home.css
@@ -1,14 +1,23 @@
-.home_b{
-    width: 100%;
-    height: 250px;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom,rgb(0,0,0,1),rgb(0,0,0,0));
-}
 .A{
     width: 100%;
     height: 250px;
     z-index: -1;
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom,rgb(0,0,0,1),rgb(0,0,0,0));
+}
+.home_con{
+    
+}
+.home{
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
+}
+.home_row{
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
 }
