--- a/src/Home.css
+++ b/src/Home.css
@@ -5,15 +5,15 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom,rgb(0,0,0,1),rgb(0,0,0,0));
 }
-.home_con{
-    
-}
 .home{
     display: flex;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
+}
+.home_con{
+    width: 100%;
 }
 .home_row{
      
